Logback configuration, find-sec-bugs, fixes
Add: find-sec-bugs plugin
Add: logback console output configuration
Add: mitigation for CRLF_INJECTION_LOGS vulnerability.
Add: LOG parameter for make test
Chg: integration tests section
Fix: performance issues with new Double(value), use Double.valueOf
Fix: close inputs if exceptions are thrown